--- a/lab9/package.json
+++ b/lab9/package.json
@@ -3,6 +3,7 @@
     "homepage": "./",
     "version": "0.1.0",
     "private": true,
+    "main": "src/index.tsx",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^12.1.4",
@@ -11,9 +12,16 @@
         "@types/node": "^16.11.27",
         "@types/react": "17.0.20",
         "@types/react-dom": "17.0.9",
+        "@types/react-router-dom": "^5.3.3",
+        "history": "^5.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
+        "redux": "^4.2.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.1",
         "typescript": "^4.6.3",
         "web-vitals": "^2.1.4"
     },
