--- a/package.json
+++ b/package.json
@@ -6,17 +6,35 @@
         "./"
     ],
     "dependencies": {
-        "express": "^4.17.1"
+        "@reduxjs/toolkit": "^1.8.2",
+        "@types/react": "^18.0.9",
+        "@types/react-native": "^0.67.7",
+        "@types/react-redux": "^7.1.24",
+        "@types/react-router-dom": "^5.3.3",
+        "axios": "^0.27.2",
+        "express": "^4.17.1",
+        "history": "^5.3.0",
+        "react-promise-tracker": "^2.1.0",
+        "react-redux": "^8.0.2",
+        "react-router": "^6.3.0",
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.2.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.1"
     },
     "devDependencies": {
-        "jest": "^26.6.3"
+        "@redux-devtools/core": "^3.12.0",
+        "jest": "^26.6.3",
+        "typings-for-css-modules-loader": "^1.7.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
         "test-lab-3": "jest lab3.test.js",
         "test-lab-4": "jest lab4.test.js",
-        "test-lab-5": "jest lab5.test.js"
+        "test-lab-5": "jest lab5.test.js",
+        "build": "cd lab8 && npm run build && cd ../lab9 && npm run build",
+        "vercel-install": "npm install --only=production && cd lab8/ && npm i && cd ../lab9/ && npm i"
     },
     "author": "",
     "license": "ISC"
